kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 607735330434.dkr.ecr.us-east-1.amazonaws.com/ecommerce-backend:latest
        ports:
        - containerPort: 4000
